feat(rbac): implement naive RBAC for Dremio OSS (phases 1-6)
Role management (RoleStore, MembershipStore, RbacConfig), privilege grants,
SQL DDL handlers, REST API (RbacResource), catalog enforcement in
CatalogServiceImpl/CatalogServiceHelper, DI wiring in DACDaemonModule/
ContextService/SabotContext, and comprehensive test coverage.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>